--- a/2_exploration.Rmd
+++ b/2_exploration.Rmd
@@ -1,16 +1,16 @@
 ---
-title: "Text Mining Rush Lyrics"
-subtitle: "Section 2: Exploration"
+title: "Battle of the Bands: Text Mining Lyrics from Rush, Queen, and AC/DC"
+subtitle: "Section 2: Data Exploration"
 author: "Michael Foley"
 date: "`r Sys.Date()`"
 output: 
   html_document:
     css: "style.css"
-    theme: jekyll-theme-minimal
+    theme: flatly
     toc: true
     toc_float: true
     highlight: haddock
-    code_folding: show
+    code_folding: hide
 ---
 
 ```{r setup, include=FALSE}
@@ -22,36 +22,62 @@ library(tidyverse)
 library(tidytext)
 library(plotly)
 library(glue)
+library(janitor)
 
 lyrics <- readRDS("./1_lyrics.Rds")
 lyrics_lines <- readRDS("./1_lyrics_lines.Rds")
+
+band_palette <- c("Queen" = "lightgoldenrod", "Rush" = "darkseagreen", "AC/DC" = "slategray1")
 ```
 
-This exploration of the lyrics is to get acquainted with the data set and perform any transformations that will likely be useful in subsequent analysis.
+> Section 2 of my [Battle of the Bands](https://mpfoley73.github.io/battle-of-the-bands/) text mining project is a brief exploration of the lyrics dataset to get acquainted with the data and perform any transformations that might be useful in subsequent analyses. 
 
-## Songs Counts
-
-Early Rush albums had fewer songs, and were produced every year or two. The last three albums were separated by about five years.
+The dataset consists of `r nrow(lyrics)` songs spread fairly even across the three bands.
 
 ```{r}
 lyrics %>% 
-  count(released, album) %>%
-  mutate(released = if_else(album == "Fly by Night", as.integer(1974), released)) %>%
-  ggplot(aes(x = released, y = n)) +
-  geom_col(fill = "lightgoldenrod") +
-  geom_text(aes(label = album, y = 0.5), angle = 90, hjust = "bottom", vjust = .25, 
-            size = 3, color = "lightgoldenrod4") +
-  scale_x_continuous(limits = c(1970, 2015), 
-                     breaks = seq(1970, 2015, by = 5), 
-                     minor_breaks = 1970:2015, 
+  group_by(band) %>%
+  summarize(
+    albums = n_distinct(album),
+    songs = n()
+  ) %>%
+  adorn_totals() %>%
+  adorn_percentages(denominator = "col") %>%
+  adorn_pct_formatting() %>%
+  adorn_ns() %>%
+  flextable::flextable() %>%
+  flextable::autofit()
+```
+
+## Song Counts
+
+The bands have substantial overlap in productive years. All three bands had a flurry of output over their first half-decade or so, then gradually slowed their pace. AC/DC is still churning out music!
+
+```{r}
+lyrics %>% 
+  count(band, released, album) %>%
+  mutate(
+    released = case_when(
+      album == "Fly by Night" ~ as.integer(1974), 
+      album == "Queen" ~ as.integer(1972),
+      album == "Queen II" ~ as.integer(1973),
+      TRUE ~ released)) %>% 
+  ggplot(aes(x = released, y = n, fill = band)) +
+  geom_col(show.legend = FALSE) +
+  scale_fill_manual(values = band_palette) +
+  geom_text(aes(label = album, y = 0.5), angle = 90, hjust = "bottom", vjust = .25,
+            size = 3, color = "grey50") +
+  scale_x_continuous(limits = c(1970, 2025), 
+                     breaks = seq(1970, 2025, by = 5), 
+                     minor_breaks = 1970:2025, 
                      expand = c(0,0)) +
   theme_light() +
   theme(
     axis.text.x = element_text(angle = 90, vjust = 0.5)
   ) +
   labs(x = "Released", y = "Songs on Album", 
-       title = glue("Neil Peart authored lyrics to {nrow(lyrics)} songs across {n_distinct(lyrics$album)} albums."),
-       subtitle = "Song Counts")
+       title = glue("{n_distinct(lyrics$album)} albums, {nrow(lyrics)} songs.")) +
+  facet_grid(rows = vars(band))
 ```
 
 # Line Counts
@@ -60,86 +86,108 @@ lyrics %>%
 lyrics_1 <- lyrics %>%
   inner_join(lyrics_lines %>% count(song_id, name = "n_lines"), by = "song_id")
 
+lc_quant_by_band <- lyrics_1 %>%
+  split(lyrics_1$band) %>% 
+  lapply(function(x) quantile(x$n_lines)) %>%
+  bind_rows(.id = "band")
+
 lc_quant <- quantile(lyrics_1$n_lines)
+lc_quant_df <- lc_quant %>% as_tibble_row() %>% bind_cols(band = "Overall")
+lc_quant_tbl <- bind_rows(lc_quant_by_band, lc_quant_df)
+
+shortest_songs <- lyrics_1 %>% slice_min(order_by = n_lines) %>% pull(song)
+longest_songs <- lyrics_1 %>% slice_max(order_by = n_lines) %>% pull(song)
 ```
 
-The IQR of lines per song was `r lc_quant["25%"]` to `r lc_quant["75%"]` lines. The shortest song was `r lyrics_1 %>% slice_min(order_by = n_lines) %>% pull(song)` (`r min(lyrics_1$n_lines)` lines). The longest was `r lyrics_1 %>% slice_max(order_by = n_lines) %>% pull(song)` (`r max(lyrics_1$n_lines)` lines).
+The overall IQR of lines per song was `r lc_quant["25%"]` to `r lc_quant["75%"]` lines, and those quantiles were consistent across the bands. 
+
+```{r}
+lc_quant_tbl %>%
+  flextable::flextable() %>%
+  flextable::autofit() %>%
+  flextable::set_caption("Song Lines Quantiles")
+```
+
+Queen wrote the shortest songs. `r shortest_songs[1]` and `r shortest_songs[2]` where `r min(lyrics_1$n_lines)` lines. The longest song was `r longest_songs` by AC/DC (`r max(lyrics_1$n_lines)` lines).
 
 ```{r}
 p <- lyrics_1 %>% 
-  ggplot(aes(x = released, y = n_lines, group = as.factor(released),
-             text = glue("{song} ({album})<br>",
+  ggplot(aes(x = released, y = n_lines, group = as.factor(released), color = band,
+             text = glue("Band: {band} <br>",
+                         "Album: {album} <br>",
+                         "Lyrics: {writer} <br>",
+                         "Song: {song} <br>",
                          "Lines: {n_lines}"))) +
-  geom_boxplot(color = "goldenrod4", fill = "lightgoldenrod") +
-  geom_jitter(color = "goldenrod", height = 0, size = 2, alpha = 0.6) +
+  geom_boxplot() +
+  geom_jitter(height = 0, size = 2, alpha = 0.6) +
+  # scale_fill_manual(values = band_palette) +
+  scale_color_manual(values = band_palette) +
   theme_light() +
+  theme(legend.position = "none") +
   labs(
-    x = "Released", y = "Line Count",
-    title = glue("Songs usually vary between {lc_quant['25%']} and {lc_quant['75%']} lines.")
-  )
+    x = NULL, y = "Line Count",
+    title = glue("Line count IQR is {lc_quant['25%']} to {lc_quant['75%']} lines.")
+  ) +
+  facet_wrap(vars(band))
 
 ggplotly(p, tooltip = "text")
 ```
 
 # Word Counts
 
-The **tidytext** package will split the text into "tokens" (words). Let's count words.
+The **tidytext** package splits the text into "tokens" (words). 
 
 ```{r}
-word_count <- lyrics %>% 
+word_count <- lyrics_1 %>% 
   unnest_tokens(output = "word", input = "lyrics", token = "words") %>%
   count(song_id, name = "n_words")
 
 lyrics_2 <- lyrics_1 %>%
   inner_join(word_count, by = "song_id")
 
+wc_quant_by_band <- lyrics_2 %>%
+  split(lyrics_1$band) %>% 
+  lapply(function(x) quantile(x$n_words)) %>%
+  bind_rows(.id = "band")
+
 wc_quant <- quantile(lyrics_2$n_words)
+wc_quant_df <- wc_quant %>% as_tibble_row() %>% bind_cols(band = "Overall")
+wc_quant_tbl <- bind_rows(wc_quant_by_band, wc_quant_df)
+
+shortest_wc_song <- lyrics_2 %>% slice_min(order_by = n_words) %>% pull(song)
+longest_wc_song <- lyrics_2 %>% slice_max(order_by = n_words) %>% pull(song)
 ```
 
-The IQR of words per song was `r wc_quant["25%"]` to `r wc_quant["75%"]` words. The shortest song was `r lyrics_2 %>% slice_min(order_by = n_words) %>% pull(song)` (`r min(lyrics_2$n_words)` words). The longest were `r lyrics_2 %>% slice_max(order_by = n_words) %>% pull(song) %>% .[1]` and `r lyrics_2 %>% slice_max(order_by = n_words) %>% pull(song) %>% .[2]` at (`r max(lyrics_2$n_words)` words).
+The overall IQR of words per song was `r wc_quant["25%"]` to `r wc_quant["75%"]` lines. AC/DC and Queen had similar quantiles, and Rush songs were about 10% longer.
+
+```{r}
+wc_quant_tbl %>%
+  flextable::flextable() %>%
+  flextable::autofit() %>%
+  flextable::set_caption("Song Words Quantiles")
+```
+
+The IQR of words per song was `r wc_quant["25%"]` to `r wc_quant["75%"]` words. The shortest song was `r shortest_wc_song` (`r min(lyrics_2$n_words)` words). The longest song was `r longest_wc_song` at (`r max(lyrics_2$n_words)` words).
 
 ```{r}
 p <- lyrics_2 %>% 
-  ggplot(aes(x = released, y = n_words, group = as.factor(released),
-             text = glue("{song} ({album})<br>",
-                         "Lines: {n_lines}<br>",
+  ggplot(aes(x = released, y = n_words, group = as.factor(released), color = band,
+             text = glue("Band: {band} <br>",
+                         "Album: {album} <br>",
+                         "Lyrics: {writer} <br>",
+                         "Song: {song} <br>",
+                         "Lines: {n_lines} <br>",
                          "Words: {n_words}"))) +
-  geom_boxplot(color = "goldenrod4", fill = "lightgoldenrod") +
-  geom_jitter(color = "goldenrod", height = 0, size = 2, alpha = 0.6) +
+  geom_boxplot() +
+  geom_jitter(height = 0, size = 2, alpha = 0.6) +
+  scale_color_manual(values = band_palette) +
   theme_light() +
+  theme(legend.position = "none") +
   labs(
-    x = "Released", y = "Word Count",
-    title = glue("Songs usually vary between {wc_quant['25%']} and {wc_quant['75%']} words.")
-  )
-
-ggplotly(p, tooltip = "text")
-```
-
-## Character Counts
-
-An easy to calculate measure measure of song length is the string length of the entire song. Let's see the distribution.
-
-```{r}
-lyrics_3 <- lyrics_2 %>%
-  mutate(n_chars = map_int(lyrics, str_length))
-
-cc_quant <- quantile(lyrics_3$n_chars)
-```
-
-The IQR of song lengths was `r quantile(lyrics_3$n_chars)["25%"]` to `r quantile(lyrics_3$n_chars)["75%"]` characters. The shortest songs were `r lyrics_3 %>% slice_min(order_by = n_chars) %>% pull(song) %>% .[1]` and `r lyrics_3 %>% slice_min(order_by = n_chars) %>% pull(song) %>% .[2]`, both at `r min(lyrics_3$n_chars)` characters. The longest song was `r lyrics_3 %>% slice_max(order_by = n_chars) %>% pull(song)` (`r max(lyrics_3$n_chars)` characters).
-
-```{r}
-p <- lyrics_3 %>% 
-  ggplot(aes(x = released, y = n_chars, group = as.factor(released),
-             text = glue("{song} ({album})<br>",
-                         "Chars: {n_chars}"))) +
-  geom_boxplot(color = "goldenrod4", fill = "lightgoldenrod") +
-  geom_jitter(color = "goldenrod", height = 0, size = 2, alpha = 0.6) +
-  theme_light() +
-  labs(
-    x = "Released", y = "Character Count",
-    title = glue("Songs usually vary between {cc_quant['25%']} and {cc_quant['75%']} characters.")
-  )
+    x = NULL, y = "Word Count",
+    title = glue("Word count IQR is {wc_quant['25%']} to {wc_quant['75%']} words.")
+  ) +
+  facet_wrap(vars(band))
 
 ggplotly(p, tooltip = "text")
 ```
@@ -149,5 +197,5 @@ ggplotly(p, tooltip = "text")
 Save the lyrics with summary stats for subsequent steps.
 
 ```{r}
-saveRDS(lyrics_3, "./2_lyrics.Rds")
+saveRDS(lyrics_2, "./2_lyrics.Rds")
 ```
